--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,15 +4,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginHorizontal="@dimen/horizontalMargin"
+    android:layout_marginVertical="@dimen/verticalMargin"
     tools:context=".HomeActivity">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/code_input"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/submit_code_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/session_code_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/insert_session_code"
+            android:foregroundTint="@color/primaryText"/>
+
+        <EditText
+            android:id="@+id/session_code_field"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lines="1"/>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/submit_code_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="@string/submit_code"
+        app:layout_constraintTop_toBottomOf="@id/code_input"
+        app:layout_constraintBottom_toTopOf="@id/green_button"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/green_button"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/green"
+        android:layout_marginHorizontal="@dimen/buttonHorizontalMargin"
+        android:layout_marginTop="@dimen/verticalMargin"
+        app:layout_constraintTop_toBottomOf="@id/submit_code_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintRight_toLeftOf="@id/yellow_button"/>
+
+    <Button
+        android:id="@+id/yellow_button"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/yellow"
+        android:layout_marginHorizontal="@dimen/buttonHorizontalMargin"
+        app:layout_constraintTop_toTopOf="@id/green_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/green_button"
+        app:layout_constraintRight_toLeftOf="@id/red_button"/>
+
+    <Button
+        android:id="@+id/red_button"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/red"
+        android:layout_marginHorizontal="@dimen/buttonHorizontalMargin"
+        app:layout_constraintTop_toTopOf="@id/green_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/yellow_button"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
