Create login with random background image

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,17 @@
 <resources>
     <color name="colorPrimary">#212121</color>
     <color name="colorPrimaryDark">#212121</color>
-    <color name="colorAccent">#FF5722</color>
+    <color name="colorAccent">@color/yellow</color>
     <color name="primaryText">#212121</color>
-    <color name="lightText">#FFFFFF</color>
+    <color name="lightText">@color/white</color>
 
+    <color name="darkTeal">#004940</color>
+    <color name="teal">#00695c</color>
+    <color name="white">#FFFFFF</color>
     <color name="green">#4CAF50</color>
     <color name="yellow">#FFC107</color>
+    <color name="darkYellow">#ffe9a7</color>
     <color name="red">#FF5722</color>
+    <color name="transparent">@android:color/transparent</color>
+    <color name="darkLayer">#5000</color>
 </resources>
