--- a/app/src/main/res/drawable/primary_button.xml
+++ b/app/src/main/res/drawable/primary_button.xml
@@ -2,7 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
 
     <solid
-        android:color="@color/yellow"/>
+        android:color="@color/transparent"/>
+
+    <stroke
+        android:color="@color/white"
+        android:width="1dp"/>
 
     <size
         android:height="20dp"/>
