--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,9 +17,10 @@
         tools:context=".modules.home.HomeActivity">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:animateLayoutChanges="true">
 
             <LinearLayout
                 android:id="@+id/user_session"
@@ -27,6 +28,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="30dp"
+                android:animateLayoutChanges="true"
                 android:gravity="center_horizontal">
 
                 <TextView
@@ -34,8 +36,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="30dp"
-                    android:text="Sessao atual: "
-                    android:foregroundTint="@color/primaryText"/>
+                    android:text="Sessao atual: "/>
 
                 <TextView
                     android:id="@+id/current_session"
@@ -48,40 +49,116 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/join_session_fields"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="30dp"
+                android:layout_marginHorizontal="@dimen/horizontalMargin"
+                android:weightSum="2"
+                android:visibility="gone">
+
+                <EditText
+                    android:id="@+id/session_code_field"
+                    android:layout_width="0dp"
+                    android:layout_weight="1.3"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/white"
+                    android:layout_marginRight="10dp"
+                    android:hint="digite o numero da sessao"/>
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_weight="0.7"
+                    android:layout_height="wrap_content"
+                    android:text="Conectar"
+                    android:background="@drawable/primary_button"
+                    android:onClick="didTapJoinSession"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/reaction_buttons"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/verticalMargin"
-                android:weightSum="3">
+                android:layout_marginHorizontal="@dimen/horizontalMargin"
+                android:weightSum="3"
+                android:visibility="gone">
 
-                <Button
+                <ImageButton
                     android:id="@+id/green_button"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="100dp"
-                    android:background="@color/green"
+                    android:background="@color/transparent"
+                    android:tint="@color/green"
+                    android:scaleType="fitCenter"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/thumbs_up_icon"
                     android:layout_marginHorizontal="@dimen/buttonHorizontalMargin"
                     android:onClick="didTapGreenButton"/>
 
-                <Button
+                <ImageButton
                     android:id="@+id/yellow_button"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="100dp"
-                    android:background="@color/yellow"
+                    android:background="@color/transparent"
+                    android:tint="@color/yellow"
+                    android:scaleType="fitCenter"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/thumbs_up_down_icon"
                     android:layout_marginHorizontal="@dimen/buttonHorizontalMargin"
                     android:onClick="didTapYellowButton"/>
 
-                <Button
+                <ImageButton
                     android:id="@+id/red_button"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="100dp"
-                    android:background="@color/red"
+                    android:background="@color/transparent"
+                    android:tint="@color/red"
+                    android:scaleType="fitCenter"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/thumb_down_icon"
                     android:layout_marginHorizontal="@dimen/buttonHorizontalMargin"
                     android:onClick="didTapRedButton"/>
             </LinearLayout>
         </LinearLayout>
+
+        <com.github.clans.fab.FloatingActionMenu
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            app:menu_colorNormal="@color/red"
+            app:menu_colorPressed="@color/red"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <com.github.clans.fab.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/add_icon"
+                app:fab_colorNormal="@color/green"
+                app:fab_colorPressed="@color/green"
+                app:fab_colorRipple="@color/green"
+                app:fab_size="mini"
+                app:fab_label="Criar nova sessao"/>
+
+            <com.github.clans.fab.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/power_icon"
+                app:fab_colorNormal="@color/yellow"
+                app:fab_colorPressed="@color/yellow"
+                app:fab_colorRipple="@color/yellow"
+                app:fab_size="mini"
+                app:fab_label="Entrar em uma sessao"
+                android:onClick="didTapWannaJoinSession"/>
+
+        </com.github.clans.fab.FloatingActionMenu>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
