--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,12 +42,20 @@
             android:background="@color/transparent"
             android:gravity="center"
             android:orientation="vertical"
+            android:animateLayoutChanges="true"
             android:paddingHorizontal="10dp"
             android:layout_marginHorizontal="55dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/login_fields_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:visibility="gone"/>
 
             <EditText
                 android:id="@+id/email_field"
@@ -77,8 +85,17 @@
                 android:inputType="textPassword"
                 android:visibility="gone" />
 
+            <EditText
+                android:id="@+id/session_id_field"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:textColor="@color/white"
+                android:hint="digite o numero da sessao"
+                android:visibility="gone" />
+
             <LinearLayout
-                android:id="@+id/register_buttons_layout"
+                android:id="@+id/alt_buttons_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -102,8 +119,17 @@
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:background="@drawable/primary_button"
-                    android:layout_gravity="end"
-                    android:text="Cadastrar" />
+                    android:text="Cadastrar"
+                    android:visibility="gone" />
+
+                <Button
+                    android:id="@+id/join_session_button"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/primary_button"
+                    android:text="Conectar"
+                    android:visibility="gone" />
             </LinearLayout>
 
             <Button
@@ -114,23 +140,6 @@
                 android:background="@drawable/primary_button"
                 android:onClick="didTapLogin"
                 android:text="Entrar" />
-
-            <EditText
-                android:id="@+id/session_id_field"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="10dp"
-                android:hint="digite o numero da sessao"
-                android:visibility="gone" />
-
-            <Button
-                android:id="@+id/join_session_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="10dp"
-                android:background="@drawable/primary_button"
-                android:text="Conectar"
-                android:visibility="gone" />
         </LinearLayout>
 
         <LinearLayout
@@ -139,13 +148,14 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:layout_marginTop="30dp"
+            android:animateLayoutChanges="true"
             app:layout_constraintTop_toBottomOf="@id/fields_layout">
 
             <Button
                 android:id="@+id/start_register_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ainda nao tenho cadastro"
+                android:text="Ainda nao tenho cadastro"
                 android:background="@drawable/secondary_button"
                 android:onClick="didTapRegister"/>
 
@@ -153,8 +163,9 @@
                 android:id="@+id/join_as_guest_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="entrar como visitante"
-                android:background="@drawable/secondary_button"/>
+                android:text="Entrar como visitante"
+                android:background="@drawable/secondary_button"
+                android:onClick="didTapWannaJoinAsGuest"/>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
