--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,19 +9,25 @@
         <item name="android:fontFamily">@font/lato_regular</item>
         <item name="android:textColor">@color/lightText</item>
         <item name="colorButtonNormal">@color/white</item>
-    </style>
-
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
         <item name="colorControlNormal">@color/white</item>
         <item name="colorControlActivated">@color/white</item>
         <item name="colorControlHighlight">@color/white</item>
         <item name="android:textColorHint">@color/white</item>
     </style>
 
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <style name="ButtonColor" parent="@android:style/Widget.Button">
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="AlertDialogCustom" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:textColor">#000</item>
+        <item name="android:textColorPrimary">@color/primaryText</item>
+        <item name="android:colorAccent">@color/red</item>
     </style>
 
 </resources>
