--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,11 +16,35 @@
         android:background="@color/primaryText"
         tools:context=".modules.home.HomeActivity">
 
+        <TextView
+            android:id="@+id/home_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="FeedSense"
+            android:gravity="center"
+            android:fontFamily="@font/nature_beauty"
+            android:layout_marginVertical="10dp"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:src="@drawable/logout_icon"
+            android:background="@color/transparent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/home_title"
+            app:layout_constraintBottom_toBottomOf="@id/home_title"/>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:orientation="vertical"
-            android:animateLayoutChanges="true">
+            android:background="@color/darkGray_161616"
+            android:animateLayoutChanges="true"
+            app:layout_constraintTop_toBottomOf="@id/home_title"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <LinearLayout
                 android:id="@+id/user_session"
