--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#212121</color>
-    <color name="colorPrimaryDark">#212121</color>
+    <color name="colorPrimary">@color/darkGray_161616</color>
+    <color name="colorPrimaryDark">@color/darkGray_161616</color>
     <color name="colorAccent">@color/yellow</color>
-    <color name="primaryText">#212121</color>
+    <color name="primaryText">@color/darkGray_212121</color>
     <color name="lightText">@color/white</color>
 
     <color name="darkTeal">#004940</color>
@@ -15,4 +15,6 @@
     <color name="red">#FF5722</color>
     <color name="transparent">@android:color/transparent</color>
     <color name="darkLayer">#5000</color>
+    <color name="darkGray_212121">#212121</color>
+    <color name="darkGray_161616">#161616</color>
 </resources>
