--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -39,129 +39,12 @@
             app:layout_constraintTop_toTopOf="@id/home_title"
             app:layout_constraintBottom_toBottomOf="@id/home_title"/>
 
-        <LinearLayout
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:orientation="vertical"
-            android:background="@color/darkGray_161616"
-            android:animateLayoutChanges="true"
             app:layout_constraintTop_toBottomOf="@id/home_title"
-            app:layout_constraintBottom_toBottomOf="parent">
-
-            <LinearLayout
-                android:id="@+id/user_session"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="30dp"
-                android:animateLayoutChanges="true"
-                android:gravity="center_horizontal">
-
-                <TextView
-                    android:id="@+id/session_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="30dp"
-                    android:text="Sessao atual: "/>
-
-                <TextView
-                    android:id="@+id/current_session"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="30dp"
-                    android:text="@{viewModel.currentSession}"
-                    tools:text="-"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/join_session_fields"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="30dp"
-                android:layout_marginHorizontal="@dimen/horizontalMargin"
-                android:weightSum="2"
-                android:visibility="gone">
-
-                <EditText
-                    android:id="@+id/session_code_field"
-                    android:layout_width="0dp"
-                    android:layout_weight="1.3"
-                    android:layout_height="match_parent"
-                    android:textColor="@color/white"
-                    android:inputType="number"
-                    android:layout_marginRight="10dp"
-                    android:hint="digite o numero da sessao"/>
-
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_weight="0.7"
-                    android:layout_height="wrap_content"
-                    android:text="Conectar"
-                    android:background="@drawable/primary_button"
-                    android:onClick="didTapJoinSession"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/reaction_buttons"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/verticalMargin"
-                android:layout_marginHorizontal="@dimen/horizontalMargin"
-                android:weightSum="3"
-                android:visibility="gone">
-
-                <ImageButton
-                    android:id="@+id/green_button"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="100dp"
-                    android:background="@color/transparent"
-                    android:tint="@color/green"
-                    android:scaleType="fitCenter"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/thumbs_up_icon"
-                    android:layout_marginHorizontal="@dimen/buttonHorizontalMargin"
-                    android:onClick="didTapGreenButton"/>
-
-                <ImageButton
-                    android:id="@+id/yellow_button"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="100dp"
-                    android:background="@color/transparent"
-                    android:tint="@color/yellow"
-                    android:scaleType="fitCenter"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/thumbs_up_down_icon"
-                    android:layout_marginHorizontal="@dimen/buttonHorizontalMargin"
-                    android:onClick="didTapYellowButton"/>
-
-                <ImageButton
-                    android:id="@+id/red_button"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="100dp"
-                    android:background="@color/transparent"
-                    android:tint="@color/red"
-                    android:scaleType="fitCenter"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/thumb_down_icon"
-                    android:layout_marginHorizontal="@dimen/buttonHorizontalMargin"
-                    android:onClick="didTapRedButton"/>
-            </LinearLayout>
-
-            <com.github.mikephil.charting.charts.LineChart
-                android:id="@+id/line_chart"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginVertical="40dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </com.github.mikephil.charting.charts.LineChart>
-        </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="parent" />
 
         <com.github.clans.fab.FloatingActionMenu
             android:layout_width="wrap_content"
