--- a/app/src/main/res/layout/fragment_home_reactions.xml
+++ b/app/src/main/res/layout/fragment_home_reactions.xml
@@ -54,27 +54,37 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="30dp"
                 android:layout_marginHorizontal="@dimen/horizontalMargin"
-                android:weightSum="2"
+                android:weightSum="1"
                 android:visibility="gone">
 
                 <EditText
                     android:id="@+id/session_code_field"
                     android:layout_width="0dp"
-                    android:layout_weight="1.3"
+                    android:layout_weight="0.6"
                     android:layout_height="match_parent"
                     android:textColor="@color/white"
                     android:inputType="number"
                     android:layout_marginRight="10dp"
                     android:hint="digite o numero da sessao"/>
 
-                <Button
+                <FrameLayout
                     android:layout_width="0dp"
-                    android:layout_weight="0.7"
-                    android:layout_height="wrap_content"
-                    android:text="Conectar"
-                    android:background="@drawable/primary_button"
-                    android:onClick="didTapJoinSession"/>
+                    android:layout_weight="0.4"
+                    android:layout_height="match_parent">
 
+                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
+                        android:id="@+id/home_join_session_button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Conectar"
+                        android:background="@drawable/primary_button"
+                        android:onClick="didTapJoinSession"
+                        android:layout_gravity="center_horizontal"
+                        app:spinning_bar_padding="0dp"
+                        app:spinning_bar_color="@color/white"
+                        app:initialCornerAngle="1000dp"
+                        app:finalCornerAngle="1000dp"/>
+                </FrameLayout>
             </LinearLayout>
 
             <LinearLayout
