--- a/app/src/main/res/layout/fragment_line_chart.xml
+++ b/app/src/main/res/layout/fragment_line_chart.xml
@@ -12,13 +12,43 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/line_chart"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="40dp"
+        <LinearLayout
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        </com.github.mikephil.charting.charts.LineChart>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:weightSum="1">
+
+                <AutoCompleteTextView
+                    android:layout_width="0dp"
+                    android:layout_weight="0.6"
+                    android:layout_marginRight="10dp"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/white"
+                    android:hint="numero da sessao"/>
+
+                <Button
+                    android:id="@+id/home_join_session_loading"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/primary_button"
+                    android:text="Buscar"/>
+            </LinearLayout>
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/line_chart"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="40dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            </com.github.mikephil.charting.charts.LineChart>
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
