--- a/app/src/main/res/layout/fragment_home_reactions.xml
+++ b/app/src/main/res/layout/fragment_home_reactions.xml
@@ -36,7 +36,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="30dp"
-                    android:text="Sessao atual: "/>
+                    android:text="Sessão atual: "/>
 
                 <TextView
                     android:id="@+id/current_session"
