--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,16 +16,32 @@
         android:background="@color/primaryText"
         tools:context=".modules.home.HomeActivity">
 
-        <TextView
+        <ImageButton
+            android:id="@+id/home_show_chart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:background="@color/transparent"
+            android:src="@drawable/chart_icon"
+            android:visibility="invisible"
+            android:onClick="didTapShowChart"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/home_title"
+            app:layout_constraintBottom_toBottomOf="@id/home_title" />
+
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/home_title"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:text="FeedSense"
             android:gravity="center"
             android:fontFamily="@font/nature_beauty"
             android:layout_marginVertical="10dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:onClick="didTapShowReactions"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/home_show_chart"
+            app:layout_constraintEnd_toStartOf="@id/home_logout"/>
 
         <ImageButton
             android:id="@+id/home_logout"
@@ -47,6 +63,7 @@
             app:layout_constraintBottom_toBottomOf="parent" />
 
         <com.github.clans.fab.FloatingActionMenu
+            android:id="@+id/home_fab_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
