--- a/app/src/main/res/layout/fragment_home_reactions.xml
+++ b/app/src/main/res/layout/fragment_home_reactions.xml
@@ -54,23 +54,21 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="30dp"
                 android:layout_marginHorizontal="@dimen/horizontalMargin"
-                android:weightSum="1"
+                android:orientation="vertical"
                 android:visibility="gone">
 
                 <EditText
                     android:id="@+id/session_code_field"
-                    android:layout_width="0dp"
-                    android:layout_weight="0.6"
-                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:textColor="@color/white"
                     android:inputType="number"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="15dp"
                     android:hint="digite o número da sessão"/>
 
                 <FrameLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="0.4"
-                    android:layout_height="match_parent">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
                     <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                         android:id="@+id/home_join_session_button"
